frontend/src/styles/site.css
body {
    background: #111;
    color: #888;
    font-size: small;
}

h1 {
    font-weight: 400;
    color: #fff;
    margin: 0 40px 20px 10px;
}

h2 {
    font-weight: 400;
    margin: 10px 0;
}

.App {
    max-width: 95%;
    margin: 0 auto;
}

.meta {
    font-size: small;
}

.meta label {
    color: #fff;
    margin: 0 5px 0 20px;
}

a {
    color: inherit;
}

h1 label,
h1 span {
    font-weight: 200;
    color: #aaa;
    font-size: small;
}

h1 label {
    color: #fff;
    margin: 0 5px 0 20px;
}

.success {
    color: #080;
}

.warn {
    color: orange;
}

.error {
    color: red;
}

.job-lists {
    vertical-align: top;
    min-width: 600px;
}

.job-list-container {
    margin: 0 10px 0;
    vertical-align: top;
}

.job-list-container + .job-list-container {
    width: 800px;
}

.job-list-container h2 {
    margin-top: 0;
}

.job-list table {
    width: 100%;
    border-spacing: 0px;
}

.job-list-header{
    display: grid;
    grid-template-columns: 150px 1fr;
    margin: 0 0 5px;
}

.job-count {
}

.job-list tr:nth-child(2n) {
    background: rgba(255, 255, 255, 0.05);
}

th {
    background-image: linear-gradient(to top, #111111, #242222);
    border: 1px solid rgba(255, 255, 255, 0.2);
    color: #ffffff;
    font-weight: 400;
    padding: 5px;
    min-width: 100px;
}

th + th + th + th {
    min-width: 300px;
}

td {
    padding: 5px 10px;
}

.icon {
    width: 15px;
    height: 15px;
    fill: #ddd;
    margin: 0 5px 0 0;
}

.show-more {
    padding: 10px;
    margin: 20px 0;
}

path.recharts-sector {
    stroke: transparent;
}

.company-chart,
.week-chart {
    display: inline-block;
    margin: 0 20px 0 0;
}

.trend-chart {
    margin: 0 20px 20px 0;
}

.job-search {
    display: inline-block;
    vertical-align: top;
}

.tag {
    display: inline-block;
    background: #444;
    color: #fff;
    font-size: x-small;
    min-width: 40px;
    padding: 4px 8px;
    margin: 10px 10px 0 0;
    text-align: center;
    border-radius: 4px;
    cursor: pointer;
}

.tag:hover {
    background: #666;
}

.trends {
    display: inline-block;
    margin: 0 20px 20px 0;
}

.trends > div {
    display: inline-block;
}

.col-layout {
    display: grid;
    grid-template-columns: 1fr 1200px;
    gap: 20px;
}

@media (max-width: 2560px) {
    .col-layout {
        grid-template-columns: 1fr 600px;
    }
    .tag-filters {
        width: 600px;
    }
    .trend-chart,
    .tags-over-time {
        scale: 0.5;
        transform-origin: 0;
    }
    .trend-chart h2,
    .tags-over-time h2 {
        scale: 2;
        transform-origin: 0;
        position: relative;
        top: -40px;
    }
    .keyword-overviews {
        flex-direction: column;
    }
}

@media (max-width: 1600px) {
    .job-list table th:nth-child(3),
    .job-list table td:nth-child(3) {
        display: none;
    }
}

@media (max-width: 1000px) {
    .col-layout {
        flex-direction: column;
    }
    .job-lists {
        width: auto;
    }
    .col-layout {
        grid-template-columns: 1fr;
    }
    .job-charts {
        display: none;
    }
}

.button {
    border: 1px solid #222;
    display: inline-block;
    padding: 5px 10px;
    border-radius: 4px;
    cursor: pointer;
    color: #fff;
    font-size: 14px;
    font-weight: 400;
    margin: 0 5px;
}

.button-inactive {
    color: inherit;
}

.button:hover {
    background: #333;
}

.sub-data {
    opacity: .6;
}

